<resources>
    <string name="app_name">MusicPlayer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_all_songs">Tất cả</string>
    <string name="title__tab_playlist">Playlist</string>
    <string name="title_tab_music_folders">Thư mục</string>
    <string name="notice_home_permissions_not_alllowed">Needed permissions not allowed. Pleae grant them to allow the
        application run as espected
    </string>


    <string name="menu_item_play_immediately">Phát ngay</string>
    <string name="menu_item_add_queue">Thêm vào hàng đợi</string>
    <string name="menu_item_add_playlist">Thêm vào danh sách phát</string>
    <string name="menu_item_share">Chia sẻ</string>
    <string name="menu_item_delete">Xoá</string>
    <string name="menu_item_edit_song_metadata">Sửa thông tin bài hát</string>
    <string name="progress_scanning_all_music_files">Đang quét file nhạc mp3...</string>
    <string name="dialog_title_edit_metadata_song">Chỉnh sửa thông tin bài hát</string>
    <string name="dialog_label_song_name">Tên bài hát:</string>
    <string name="dialog_label_song_artist">Ca sĩ:</string>
    <string name="dialog_label_song_author">Tác giả:</string>
    <string name="dialog_label_song_album">Album:</string>
    <string name="dialog_label_song_genres">Dòng nhạc:</string>
    <string name="button_title_confirm">Hoàn tất</string>
    <string name="button_title_cancel">Huỷ</string>
    <string name="content_desc_avatar_music">An avatar song</string>
    <string name="content_desc_context_menu">Context menu button</string>

</resources>
